--- a/myRep/package.json
+++ b/myRep/package.json
@@ -15,10 +15,14 @@
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.1.0",
     "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.0",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "input-otp": "^1.2.4",
     "lucide-react": "^0.395.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
